--- a/FrontEnd/thuexe/home.html
+++ b/FrontEnd/thuexe/home.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="font/fontawesome/css/all.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         <div id="header">
             <div class="container justify-content-between">
                 <a href="" id="logo">
-                    <img src="/images/ScreenShot_20210413230239.png" alt="">
+                    <img src="./images/ScreenShot_20210413230239.png" alt="">
                 </a>
                 <form id="search" action="" class="align-self-center">
                     <input type="text" class="bg-light" name="q" placeholder="Bạn muốn tìm gì?">
